# Teams

./: CMakeLists.txt  Makefile  RFC.txt
client/: cmd.c  encapsulated.c  main.c
client/classes/: socket.c  tor.c
client/cmd/: create.c  list.c  log.c  messages.c  subscription.c  uuid.c
commun/: context_id.c  tor.c
includes/: macro.h
includes/client/: answers.h  class.h  encapsulated.h
includes/context/: context.h  context_id.h
includes/server/: answers.h  class.h  encapsulated.h  members.h  prototype.h  save.h  tor.h
libs/list/: Makefile  list.h  list_dynamic.c  list_static.c  node.c  node.h
libs/myregex/: Makefile  myregex.c  myregex.h
libs/mystring/: Makefile  get_between.c  mystring.c  mystring.h
libs/myteams/: logging_client.h  logging_server.h
libs/object/: Makefile  function.c  function.h  macro.h  object.h
libs/socket/: Makefile  prototype.h
libs/socket/basic_client/: basic_client.c  basic_client.h
libs/socket/basic_server/: basic_server.c  basic_server.h
libs/socket/principe/: principe.c  principe.h
libs/utils/: Makefile  memory.c  myerror.c  utils.h
server/: encapsulated.c  main.c  utils.c  utils_extended.c
server/classes/: context.c  socket.c
server/cmd/: create.c  help.c  info.c  list.c  log.c  messages.c  use.c  user.c  users.c
server/cmd/subscription/: list.c  subscription.c
server/members/: loop.c  methods.c  properties_like.c
server/save/: accesser.c  decrypt.c  read.c  utils.c  write.c
server/tor/: ctor_context.c  ctor_utils.c  dtor.c  tor_socket.c
